# fedprox-shakespeare

./: README.md  pyproject.toml
pytorchexample/: task.py
quickstart-pytorch/: clean_data.py
quickstart-pytorch/pytorchexample/: task.py
src/: client_app.py  server_app.py  task.py
