[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedprox-shakespeare"
version = "1.0.1"
description = "Federated Learning on Shakespeare dataset using FedProx and Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.flwr.app]
publisher = "cous"

[tool.flwr.app.components]
serverapp = "src.server_app:app"
clientapp = "src.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-evaluate = 0.5
learning-rate = 0.1
batch-size = 32
# client fraction
c = 0.1
# local epochs
e = 5
# local minibatch size
b = 10
